# siesta

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  README.md  SIESTA_vgen.sh  towncrier.toml
Pseudo/vnl-operator/: CMakeLists.txt
Src/: CMakeLists.txt  Makefile  alloc.F90  amn.F90  atm_types.f  atom.F  bands.F  basis_enthalpy.f90  basis_io.F  basis_specs.f  basis_types.f  broadcast_fdf_struct.F90  broyden_optim.F  bsc_cellxc.F  cell_broyden_optim.F  cell_fire_optim.F  cgvc.F  cgvc_zmatrix.F  chemical.f  class_Distribution.F90  class_OrbitalDistribution.F90  compute_dm.F  configured_values_m.F90.in  create_Sparsity_SC.F90  denmatlomem.F  dftu.F  dftu_specs.f  dhscf.F  dhsdr_m.F90  diag.F90  diag_option.F90  dm_charge.F90  dnaefs.F  domain_decom.F  dynamics.F  electrostatic.f  fc_matrices_m.F90  fft.F  fftw3_wrapper.F90  final_H_f_stress.F  (+174 more)
Src/MPI/: CMakeLists.txt  generate_integer.sh  generate_real.sh  mpi__include.f90  mpi_interfaces.F90  mpi_macros.f  mpi_siesta.F90
Src/easy-fdict/: CMakeLists.txt
Src/easy-ncdf/: CMakeLists.txt  netcdf_ncdf.F90
Src/libsys/: CMakeLists.txt
Src/libunits/: CMakeLists.txt  units.F90  units.py  units_codata2018.f90  units_legacy.f90
Src/libxc-compat/: CMakeLists.txt
Src/pexsi-solver/: README.md  m_pexsi.F90  m_pexsi_dos.F90  m_pexsi_driver.F90  m_pexsi_local_dos.F90  siesta_pexsi_interface.F90
Src/qmmm/: qmmm_core.f90  qmmm_ewald.f90  qmmm_helpers.f90  qmmm_interface.F90  qmmm_mmforces.F90  qmmm_mneighb.f90  qmmm_pcpot.F90  qmmm_structure.f90
Src/stubs/: CMakeLists.txt
Src/wxml/: CMakeLists.txt
Src/xmlparser/: CMakeLists.txt
Tests/: CMakeLists.txt  README  cmp_digest.sh  out_digest.awk  out_digest_yaml.awk  run_all_tests.sh  set_siesta_dir.sh  test-cfg.yml  yaml_compare.py
Tests/00.BasisSets/: CMakeLists.txt  bessel.fdf  bessel_rich.fdf  charge_confinement.fdf  custom_softbasis.fdf  default_basis.fdf  filteret.fdf  fireballs.fdf  ghost_atom.fdf  nodes.fdf  script.sh  verifier.sh  water_box.fdf
Tests/01.PseudoPotentials/: CMakeLists.txt  base_si2.fdf  full.psml.fdf  psf.fdf  reparam-rgoff.fdf  reparam.fdf  script.sh  sl.psml.fdf  soft-full.psml.fdf  soft.psml.fdf
Tests/02.SpinPolarization/: CMakeLists.txt  base_fe3.fdf  fe_noncol.fdf  fe_noncol_gga.fdf  fe_noncol_kp.fdf  fe_noncol_sp.fdf  fe_spin.fdf  fe_spin_directphi.fdf  script.sh  verifier.sh
Tests/03.SpinOrbit/: CMakeLists.txt  FePt-X-X.fdf  FePt-offsite.fdf  FePt-onsite.fdf  script.sh
Tests/04.SCFMixing/: CMakeLists.txt  base_fe3.fdf  broyden.fdf  chargemix.fdf  fullmix.fdf  linear.fdf  pulay.fdf  script.sh
Tests/05.Bands/: CMakeLists.txt  base_ge.fdf  ge_bands.fdf  ge_bands_so.fdf  ge_bands_so_bpoints.fdf  ge_bands_so_fatbands.fdf  script.sh
Tests/06.DensityOfStates/: CMakeLists.txt  base_fe.fdf  ldos.fdf  pdos_g.fdf  pdos_k.fdf  pdos_kp.fdf  pdos_kp_nc.fdf  pdos_kp_pol.fdf  pdos_kp_soc.fdf  script.sh
Tests/07.ForceConstants/: CMakeLists.txt  base_si2.fdf  born.fdf  born_nc.fdf  born_sp.fdf  fc.fdf  script.sh
Tests/08.GeometryOptimization/: CMakeLists.txt  base_benzene_zm.fdf  base_mgco3.fdf  broyden.fdf  broyden_vc.fdf  cg.fdf  cg_vc.fdf  cg_vc_constantvol.fdf  fire.fdf  fire_vc.fdf  script.sh  zm_broyden.fdf  zm_cg.fdf  zm_fire.fdf
Tests/09.MolecularDynamics/: CMakeLists.txt  anneal.ANNEAL_RESTART  anneal.XV  anneal.fdf  anneal_pt.ANNEAL_RESTART  anneal_pt.XV  anneal_pt.fdf  anneal_pt_restart.fdf  anneal_restart.fdf  base_wat2.fdf  nose.NOSE_RESTART  nose.XV  nose.fdf  nose_restart.fdf  npr.NPR_RESTART  npr.XV  npr.fdf  npr_restart.fdf  npr_rip.NPR_RESTART  npr_rip.XV  npr_rip.fdf  npr_rip_restart.fdf  pr.PR_RESTART  pr.XV  pr.fdf  pr_restart.fdf  script.sh  verlet.VERLET_RESTART  verlet.XV  verlet.fdf  verlet_restart.fdf
Tests/10.Functionals/: CMakeLists.txt  am05.fdf  base_graph.fdf  c6.fdf  dftu_soc.fdf  h2o_qmmm.fdf  ldau.fdf  lyp.fdf  pbe.fdf  pbesol.fdf  script.sh  vdw_drsll.fdf  vdw_vv.fdf
Tests/11.ElectronicProperties/: CMakeLists.txt  base_fen.fdf  charge.fdf  charge_partial.fdf  charge_sp.fdf  coop.fdf  coop_sp.fdf  optical.fdf  optical_sp.fdf  script.sh  verifier.sh
Tests/12.Solvers/: CMakeLists.txt  base_si8.fdf  coords.Si987H372.fdf  quantum-dot-base.fdf  script.sh  si-qdot-elpa-native-1stage-gpu.fdf  si-qdot-elpa-native-1stage.fdf  si-qdot-elpa-native-gpu.fdf  si-qdot-elpa-native.fdf  si-qdot-elsi-elpa-1stage-gpu.fdf  si-qdot-elsi-elpa-1stage.fdf  si-qdot-elsi-elpa-gpu.fdf  si-qdot-elsi-elpa.fdf  si-qdot-elsi-pexsi.fdf  si-qdot-pexsi-native.fdf  si_default.fdf  si_mrrr.fdf  si_omm1.fdf  si_omm2.fdf  si_on.fdf  si_procy.fdf  sih-elsi.fdf
Tests/13.MiscOptions/: CMakeLists.txt  base_wat_bigbox.fdf  base_wat_smallbox.fdf  bulk_bias.fdf  dip_corr.fdf  dip_corr_vac.fdf  filter_cutoff.fdf  filter_tol.fdf  gate_charge.fdf  gate_hartree.fdf  gcs.fdf  highmesh.fdf  net_charge.fdf  net_charge_dope.fdf  script.sh  shift_cop.fdf  synth_atom.fdf
Tests/14.FileIO/: CMakeLists.txt  base_wat.fdf  denchar.fdf  kp_file.KP  kp_file.fdf  s_only.fdf  save_dm.DM  save_dm.fdf  save_init_rho.fdf  save_outs.fdf  script.sh  write_ncdf.fdf
Tests/15.TDDFT/: CMakeLists.txt  TDDFT_h2o.DM  TDDFT_h2o.TDWF  TDDFT_h2o.TDXV  TDDFT_h2o1.fdf  TDDFT_h2o2.fdf  script.sh
Tests/16.TranSiesta/: CMakeLists.txt  ts_chain.fdf  ts_n_terminal_3.TSHS  ts_n_terminal_3.fdf  ts_n_terminal_elec_x.TSHS  ts_n_terminal_elec_x.fdf  ts_n_terminal_elec_z.TSHS  ts_n_terminal_elec_z.fdf
Tests/17.Wannier90/: CMakeLists.txt  README_OlderInterface  graphene_w90.fdf  script.sh  w90-on-the-fly.fdf  wannier.fdf
Tests/Dependency_Tests/: CMakeLists.txt  dftd3.fdf  lua_h2o.fdf  script.sh
Tests/Pseudos/: README
Tests/Unit_Tests/: CMakeLists.txt  test_citations.f90
Util/: CMakeLists.txt
Util/Bands/: CMakeLists.txt
Util/COOP/: CMakeLists.txt  fat.f90  io_hs.f90  main_vars.f90  mprop.f90  orbital_set.f90  read_curves.f90  read_spin_texture.f90  subs.f90
Util/Contour/: CMakeLists.txt  grid1d.f  grid2d.f
Util/DensityMatrix/: CMakeLists.txt
Util/Eig2DOS/: CMakeLists.txt  Eig2DOS.f90
Util/Gen-basis/: CMakeLists.txt  gen-basis.F
Util/Grid/: CMakeLists.txt  (+1 more)
(+547 files in other folders)
